modified to requirements

--- a/views/sightings/main.ejs
+++ b/views/sightings/main.ejs
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome to The X-Files</h1>
     <h2>Finding UFO</h2>
-    <form action='/sightings/results'>
+    <form action='/sightings/'>
         <label for="city">City : </label>
         <input type="text" name ="city" placeholder="Corona">
 
