--- a/views/sightings/search.ejs
+++ b/views/sightings/search.ejs
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include('../partials/head.ejs') %>
 </head>
+
 <body>
     <h1>The X-Files</h1>
-    <% results.forEach((result) => { %>
-        <h4>Description: <%=result.description%></h4>
-        <ul>
-            <li>Date: <%=result.date%></li> 
-            <li>City: <%=result.city%></li>  
-            <li>State: <%=result.state%></li>  
-            <li>Shape: <%=result.shape%></li>   
-            <li>Duration: <%=result.duration%></li>  
-        </ul>
-    <% }) %>
+    <% if (!results.length) { %>
+        <h4>No Results</h4>
+        <% } else { %>s
+            <% results.forEach((result) => { %>
+                <h4>Description:
+                    <%=result.description%>
+                </h4>
+                <ul>
+                    <li>Date:
+                        <%=result.date%>
+                    </li>
+                    <li>City:
+                        <%=result.city%>
+                    </li>
+                    <li>State:
+                        <%=result.state%>
+                    </li>
+                    <li>Shape:
+                        <%=result.shape%>
+                    </li>
+                    <li>Duration:
+                        <%=result.duration%>
+                    </li>
+                </ul>
+                <% } %>
+          <% ) %>
+    <% } %>
 </body>
+
 </html>
