--- a/views/sightings/search.ejs
+++ b/views/sightings/search.ejs
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1>The X-Files</h1>
+  <%- include('../sightings/main.ejs') %>
   <% if (!results.length) { %>
   <h4>No Results</h4>
   <% } else { %>
